---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2025-06-05
  Changes:
    - Improved the asteroids on newly generated routes. Redrawn Space Connections will now examine the asteroids in orbit of each planet and use them to construct asteroids on the route. Thanks to AnotherZach for collaborating on this.
---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 2025-03-22
  Changes:
    - Fixed PlanetsLib version.
---------------------------------------------------------------------------------------------------
Version: 1.3.9
Date: 2025-03-22
  Changes:
    - PlanetsLib version bump.
---------------------------------------------------------------------------------------------------
Version: 1.3.8
Date: 2025-03-16
  Changes:
    - License switch.
---------------------------------------------------------------------------------------------------
Version: 1.3.7
Date: 2025-03-16
  Changes:
    - Added mod setting to multiply all route lengths by a value (defaults to 1).
---------------------------------------------------------------------------------------------------
Version: 1.3.6
Date: 2025-03-09
  Changes:
    - Renamed the API 'redrawn_connections_keep' on space locations to 'redrawn_connections_exclude'. Using 'redrawn_connections_keep' will still work but is undocumented.
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2025-03-08
  Changes:
    - Fixed leaving in some test code which caused Nauvis to vanish!
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2025-03-08
  Changes:
    - Hidden space locations are now excluded from the triangulation.