@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.4
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash related to asteroid chunks.
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 2025-06-05
